#export raspicam_DIR=/home/pi/raspicam-0.1.6/build
cmake_minimum_required (VERSION 2.8) 
project (raspicam_test)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (tennis tennis.cpp)  
target_link_libraries (tennis wiringPi wiringPiDev pthread ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
